--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,12 @@
     "axios": "^1.4.0",
     "bootstrap": "^4.6.0",
     "cors": "^2.8.5",
+    "date-fns": "^2.30.0",
+    "dayjs": "^1.11.9",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
+    "react-router": "^5.2.0",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
